# xbAI

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  FINDINGS.md  Load-Env.ps1  README.md  Start-Build.ps1  T1-NOTES.md  TASKS.md  Test-Requirements.ps1  idea.md
core/: CMakeLists.txt  README.md  core.cpp  core.h
core/inference/: OgaInferenceEngine.cpp  OgaInferenceEngine.h  README.md  oga_stub.h
core/model/: GenaiConfig.cpp  GenaiConfig.h  ModelLocator.cpp  ModelLocator.h  README.md
core/pal/: IDashboard.h  IDownloader.h  IInferenceEngine.h  IInput.h  ILifecycle.h  IModelStore.h  ISocketListener.h  README.md  types.h
core/queue/: InferenceQueue.cpp  InferenceQueue.h  README.md
core/server/: HttpServer.cpp  HttpServer.h  JsonUtils.h  README.md
docs/: BRIEF-t1c-to-gdk.md  wave1-log.md
docs/adr/: 0001-inference-backend.md  0002-api-serving.md  0003-v1-scope-dev-tool.md  0004-portability-uwp-to-gamecore.md  0005-build-system-not-standardized.md  0006-pal-contract-and-philosophy.md  README.md
pal/: README.md
pal/gdk-desktop/: CMakeLists.txt  GdkDashboard.cpp  GdkDashboard.h  GdkDownloader.cpp  GdkDownloader.h  GdkInput.cpp  GdkInput.h  GdkLifecycle.cpp  GdkLifecycle.h  GdkModelStore.cpp  GdkModelStore.h  GdkSocketListener.cpp  GdkSocketListener.h  README.md  StubInferenceEngine.h  main.cpp  stubs.h
pal/gdk-xbox/: README.md
pal/uwp/: README.md
xbprobe/: Get-Dependencies.ps1  README.md  build.ps1  deploy.ps1  get-results.ps1  probe-results-run6.txt  probe-results-run7.txt  probe-results-run8-t3.txt  probe-results-run9-t4.txt  xbprobe.sln
xbprobe/model-stage/: README.md
xbprobe/xbprobe/: App.cpp  HfDownloadProbe.cpp  LanProbe.cpp  Package.appxmanifest  Probe.cpp  Probe.h  pch.h  xbprobe.vcxproj  xbprobe.vcxproj.filters
xbprobe/xbprobe/redist/: README.md
